--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,10 @@
 
 # Setuptools distribution folder.
 /dist/
+/build/
 
 # Python egg metadata, regenerated from source files by setuptools.
 /*.egg-info
+
+# Visual code files
+/.vscode/
